crates/bamltype/tests/ui/non_string_literal_attr.rs
use bamltype::BamlType;

#[BamlType]
#[baml(name = 123)]
struct NonStringName {
    value: String,
}

fn main() {}
